added datajoint requirements in anticipation of migrating cohorts as well as more complete docstrings to methods of table

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ description = ""
 authors = ["Elijah Christensen <ejd.christensen@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7.1"
-pyspark = "^3.1.2"
+python = "^3.7.3"
 pyarrow = "^5.0.0"
 python-slugify = "^5.0.2"
 tableone = "^0.7.10"
+datajoint = "^0.13.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
